--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -8,77 +8,43 @@
     <ScrollView
         android:id="@+id/profile_scrollview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:gravity="center_vertical">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginVertical="10dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/profile_edit_profile"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:background="@color/colorGrey" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="프로필 수정" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginVertical="10dp"
-                    android:layout_weight="1"
-
-                    android:orientation="vertical">
 
                     <ImageView
                         android:id="@+id/profile_image"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_marginHorizontal="20dp"
+                        android:layout_marginVertical="20dp"
                         android:background="@color/colorGrey" />
-
-                    <TextView
-                        android:id="@+id/profile_name_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="name" />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layout_marginVertical="10dp"
-                    android:layout_weight="1"
-
-                    android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/profile_"
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:background="@color/colorGrey" />
-
-                    <TextView
-                        android:id="@+id/profile_name_text"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="temp" />
-                </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/profile_name_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20dp"
+                            android:textColor="@color/colorBlack"
+                            android:text="name" />
+                        <TextView
+                            android:id="@+id/profile_school_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20dp"
+                            android:text="school" />
+                    </LinearLayout>
 
             </LinearLayout>
 
@@ -101,6 +67,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:scrollbars="none"
+                    android:layout_weight="1"
                     android:background="@color/colorWhite">
                 </ListView>
             </LinearLayout>
@@ -108,7 +75,7 @@
                 android:id="@+id/profile_facebook_logout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="facebook logout"
+                android:text="로그아웃"
                 android:layout_gravity="center"/>
         </LinearLayout>
     </ScrollView>
