--- a/app/src/main/res/layout/item_profile2.xml
+++ b/app/src/main/res/layout/item_profile2.xml
@@ -13,5 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:text="text1"
+        android:textSize="22dp"
+        android:textColor="@color/colorBlack"
         android:layout_weight="1"/>
 </LinearLayout>
