--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -14,33 +14,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Project Line"
+                android:text="Project Icheon"
                 android:textStyle="bold"
                 android:textSize="20dp"
                 android:textColor="@color/colorWhite"
                 android:gravity="left|center_vertical"
                 android:layout_weight="1"/>
-            <LinearLayout
-                android:id="@+id/toolbar_heart_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_marginRight="14dp"
-                android:gravity="center">
-                <ImageView
-                    android:id="@+id/toolbar_heart_image"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:background="@drawable/ic_heart" />
-                <TextView
-                    android:id="@+id/toolbar_heart_count"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:layout_marginLeft="5dp"
-                    android:textSize="22dp"
-                    android:textStyle="bold"
-                    android:text="0"/>
-            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.Toolbar>
 
