--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,6 +25,7 @@
                         android:layout_height="80dp"
                         android:layout_marginHorizontal="20dp"
                         android:layout_marginVertical="20dp"
+                        android:scaleType="centerCrop"
                         android:background="@color/colorGrey" />
                     <LinearLayout
                         android:layout_width="match_parent"
