--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -7,7 +7,7 @@
         android:id="@+id/chat_button_finish"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/chat_recyclerView"
     android:layout_width="match_parent"
     android:layout_height="200dp"
