--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/main_toolbar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <include layout="@layout/toolbar"/>
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
     <FrameLayout
-        android:id="@+id/main_content"
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/main_bottom_navigation_view"
-        android:layout_below="@id/main_toolbar_layout" />
+        android:layout_below="@id/main_toolbar_layout"
+        app:labelVisibilityMode="labeled"/>
 
     <LinearLayout
         android:id="@+id/main_layout_divIsion1"
@@ -26,13 +27,13 @@
         android:orientation="horizontal"
         android:background="@color/colorGrey"
         android:layout_above="@id/main_bottom_navigation_view"
-        android:layout_below="@+id/main_content">
+        android:layout_below="@+id/fragment_container">
     </LinearLayout>
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/main_bottom_navigation_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:menu="@menu/item_bottom_navigation_view">
-    </android.support.design.widget.BottomNavigationView>
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 </RelativeLayout>
