--- a/app/src/main/res/layout/activity_regist_profile.xml
+++ b/app/src/main/res/layout/activity_regist_profile.xml
@@ -20,7 +20,7 @@
             android:textColor="@color/colorMain"
             android:layout_marginVertical="20dp"/>
         <ImageView
-            android:id="@+id/update_profile_image"
+            android:id="@+id/regist_profile_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@android:color/holo_green_light"
@@ -29,18 +29,19 @@
             android:layout_gravity="center_horizontal"
             android:clickable="true"
             />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
             android:layout_gravity="left"
-            android:text="name"/>
+            android:text="nickName"/>
         <EditText
-            android:id="@+id/update_profile_name"
+            android:id="@+id/regist_profile_nickname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:hint="name" />
+            android:hint="nick name" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,7 +49,7 @@
             android:layout_gravity="left"
             android:text="school"/>
         <EditText
-            android:id="@+id/update_profile_school"
+            android:id="@+id/regist_profile_school"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
@@ -60,7 +61,7 @@
             android:layout_gravity="left"
             android:text="grade"/>
         <EditText
-            android:id="@+id/update_profile_grade"
+            android:id="@+id/regist_profile_grade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
@@ -72,7 +73,7 @@
             android:layout_gravity="left"
             android:text="sex"/>
         <EditText
-            android:id="@+id/update_profile_sex"
+            android:id="@+id/regist_profile_sex"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
@@ -81,7 +82,7 @@
 
 
     <Button
-        android:id="@+id/update_profile_ok_button"
+        android:id="@+id/regist_profile_ok_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
