--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/write_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -34,19 +36,60 @@
 
         </LinearLayout>
 
-    </android.support.v7.widget.Toolbar>
-    <EditText
-        android:id="@+id/write_title"
+    </androidx.appcompat.widget.Toolbar>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="제목"/>
+        android:layout_below="@+id/write_toolbar"
+        android:layout_alignBottom="@+id/write_bottom_layout">
+
+        <LinearLayout
+            android:id="@+id/write_content_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="10dp">
+
+            <EditText
+                android:id="@+id/write_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="제목" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:background="@color/colorDivision"></LinearLayout>
+
+            <EditText
+                android:id="@+id/write_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="여기를 눌러서 글을 작성할 수 있습니다." />
+            <LinearLayout
+                android:id="@+id/write_photo_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
     <LinearLayout
+        android:id="@+id/write_bottom_layout"
         android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@color/colorDivision"></LinearLayout>
-    <EditText
-        android:id="@+id/write_content"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:hint="여기를 눌러서 글을 작성할 수 있습니다."/>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        >
+        <ImageView
+            android:id="@+id/write_add_photo"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/push_icon"/>
+    </LinearLayout>
+
+
+</RelativeLayout>
