--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -6,18 +6,44 @@
     android:layout_marginVertical="10dp"
     android:layout_marginHorizontal="10dp">
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-        <TextView
-            android:id="@+id/comment_name"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18dp"
-            android:textColor="@color/colorBlack"
-            android:text="익명"/>
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/comment_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:textColor="@color/colorBlack"
+                android:textStyle="bold"
+                android:text="익명"
+                android:layout_weight="1"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/comment_reply_button"
+                    android:layout_width="60dp"
+                    android:layout_height="40dp"
+                    android:text="답글"/>
+            </LinearLayout>
+
+        </LinearLayout>
         <TextView
             android:id="@+id/comment_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:textColor="@color/colorBlack"
+            android:text="content"/>
+        <TextView
+            android:id="@+id/comment_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16dp"
