--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorMain">#B02F33</color>
-    <color name="colorGrey">#8b8b8b</color>
+    <color name="colorGrey">#CCCCCC</color>
     <color name="colorDivision">#e9e9e9</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlack">#000000</color>
