--- a/app/src/main/res/menu/item_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/item_bottom_navigation_view.xml
@@ -12,7 +12,7 @@
     <item
         android:id="@+id/navigation_menu3"
         android:icon="@android:drawable/ic_menu_edit"
-        android:title="쪽지함" />
+        android:title="멘토링" />
     <item
         android:id="@+id/navigation_menu4"
         android:icon="@android:drawable/ic_menu_help"
