--- a/app/src/main/res/layout/activity_meal.xml
+++ b/app/src/main/res/layout/activity_meal.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/meal_text"
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/menu_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"></androidx.viewpager.widget.ViewPager>
 </LinearLayout>
