--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,12 +20,14 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp">
             <GridView
                 android:id="@+id/home_gridview"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:numColumns="3"
+
                 android:verticalSpacing="30dp"
                 android:scrollbars="none"
                 android:gravity="center"></GridView>
